@@ -29,6 +29,7 @@
 #define SuccessSound                    @"SuccessSound"
 #define FailureSound                    @"FailureSound"
 #define ExternalEditor                  @"ExternalEditor"
+#define ExternalDebugger                @"ExternalDebugger"
 #define TabBehaviour                    @"TabBehaviour"
 #define SeparateBuilder			@"SeparateBuilder"
 #define SeparateLauncher		@"SeparateLauncher"
